# DuneScape

./: CMakeLists.txt  LICENSE  README.md
include/core/: array.hpp  dunefield.hpp
scripts/: format_src.sh
src/: main.cpp
src/core/: array.cpp  dunefield.cpp
